<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/men" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/settings"
            android:title="@string/ajustes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/help"
            android:title="@string/ayuda" />
        <item
            android:id="@+id/puntuarApp"
            android:icon="@drawable/secure"
            android:title="@string/calif_canos" />
        <item
            android:id="@+id/enviarBugs"
            android:icon="@drawable/report_bug"
            android:title="@string/reportar_un_bug" />
    </group>
    <group>
        <item
            android:id="@+id/cerrarsesion"
            android:icon="@drawable/ok"
            android:title="@string/cerrar_sesion" />
    </group>

</menu>