<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".devices2">

    <ImageButton
        android:id="@+id/btnBackDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chevron_left_black_24dp" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="350dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/estado_de_dispositivo"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="46dp"
        android:layout_height="49dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="279dp"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/salidaVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBackDevice"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:text="@string/servidor"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/direcci_n_ip_del_servidor"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="116dp"
        android:text="@string/estado_de_la_conexi_n"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <TextView
        android:id="@+id/txtServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="4dp"
        android:text="Raspberry Pi 3"
        android:textColor="#4CAF50"
        app:layout_constraintStart_toEndOf="@+id/textView58"
        app:layout_constraintTop_toBottomOf="@+id/textView57" />

    <TextView
        android:id="@+id/txtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="28dp"
        android:text="@string/esperando"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIPHost" />

    <ImageView
        android:id="@+id/salidaVideo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings"
        app:srcCompat="@drawable/codigo_qr_1024x1024" />

    <Button
        android:id="@+id/btnConectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="16dp"
        android:text="@string/conectar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtIPHost"
        android:layout_width="136dp"
        android:layout_height="41dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtServer" />

</androidx.constraintlayout.widget.ConstraintLayout>